исправил разметку фона для header и promo

--- a/source/sass/blocks/burger-menu.scss
+++ b/source/sass/blocks/burger-menu.scss
@@ -5,6 +5,10 @@
   background-color: #000000;
 }
 
+.burger-menu--no-js {
+  display: none;
+}
+
 .burger-menu--closed {
   width: 24px;
   height: 2px;
