--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -89,18 +89,7 @@
     min-height: 696px;
     padding: 0;
 
-    background: linear-gradient(to right, #ffffff 0, #ffffff 50%, #65a93c 50%, #65a93c 100%);
-    background-image: url("../img/index-background-desktop@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: 100%;
-
-
-    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/index-background-desktop@2x.jpg");
-      background-repeat: no-repeat;
-      background-position: 100%;
-      background-size: 50%;
-    }
+    background: none;
   }
 
 
