--- a/source/sass/blocks/more-product.scss
+++ b/source/sass/blocks/more-product.scss
@@ -35,6 +35,7 @@
 .more-product__description {
   font-family: $oswaldRegular;
   font-size: $basicFontSize;
+  font-weight: 400;
   line-height: 20px;
 
   margin: 0;
