--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -122,13 +122,8 @@
     &:active {
       border: none;
     }
-  }
 
-  .slider__button--current {
-
-  }
-
-  .slider__toggle {
+  }  .slider__toggle {
     max-width: 428px;
     height: 6px;
 
@@ -173,12 +168,13 @@
     &:focus {
       box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.25);
     }
-
-    &:hover::after,
-    &:focus::after {
-      display: none;
+    &:active {
+      border-width: 2px;
+      border-color: #68b738;
+      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.3);
     }
   }
+
 }
 
 @media (min-width: $largeDeviceWidth) {
