поправил шрифты и позиционирование кнопки в promo

--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -98,11 +98,13 @@
     min-width: 195px;
     margin-top: -580px;
     margin-bottom: 507px;
-    margin-left: 9px;
+    margin-left: 99px;
     padding-top: 15px;
     padding-right: 25px;
     padding-bottom: 17px;
     padding-left: 25px;
+
+    z-index: 1;
   }
 }
 
