--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -5,3 +5,11 @@
   src: url("../fonts/oswaldregular.woff2") format("woff2"),
     url("../fonts/oswaldregular.woff") format("woff");
 }
+
+@font-face {
+  font-family: "Oswald";
+  font-weight: 600;
+  font-style: normal;
+  src: url("../fonts/oswaldmedium.woff2") format("woff2"),
+    url("../fonts/oswaldmedium.woff") format("woff");
+}
