--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,6 +1,6 @@
 .page-footer {
   box-sizing: border-box;
-  width: 320px;
+  width: 100%;
   padding-top: 38px;
   padding-right: 20px;
   padding-bottom: 20px;
@@ -11,10 +11,21 @@
   background-color: #f2f2f2;
 }
 
+.page-footer__inner {
+
+
+  box-sizing: border-box;
+  width: $smallDeviceWidth;
+  margin: 0 auto;
+  padding-top: 3px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
 .page-footer__site-title-link {
   display: inline-block;
 
-  margin-bottom: 32px;
+  margin-bottom: 29px;
 
   vertical-align: middle;
 }
@@ -63,7 +74,7 @@
     display: flex;
 
     box-sizing: border-box;
-    width: 768px;
+    width: $mediumDeviceWidth;
     margin: 0 auto;
     padding-top: 3px;
     padding-right: 30px;
@@ -104,7 +115,7 @@
     display: flex;
 
     box-sizing: border-box;
-    width: 1440px;
+    width: $largeDeviceWidth;
     margin: 0 auto;
     padding-top: 8px;
     padding-right: 110px;
