--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -12,14 +12,10 @@
 }
 
 .page-footer__inner {
-
-
   box-sizing: border-box;
-  width: $smallDeviceWidth;
   margin: 0 auto;
+  width: 280px;
   padding-top: 3px;
-  padding-right: 20px;
-  padding-left: 20px;
 }
 
 .page-footer__site-title-link {
