--- a/source/sass/blocks/program-form.scss
+++ b/source/sass/blocks/program-form.scss
@@ -176,6 +176,16 @@
     border: none;
   }
 
+  .program-form__radio-input:focus + .program-form__radio-btn {
+    border-color: transparent;
+    box-shadow: 0 0 0 1px #ffffff,  0 0 0 3px #444444;
+  }
+
+  .program-form__checkbox-input:focus + .program-form__checkbox-btn {
+    border-color: transparent;
+    box-shadow: 0 0 0 9px #ffffff,  0 0 0 11px #444444;
+  }
+
   .program-form__item .program-form__label {
     font-size: $lowFontSize;
     line-height: 20px;
@@ -241,15 +251,15 @@
   }
 
   .program-form__about-cat {
-    width: 680px;
+    width: 570px;
 
-    flex-basis: 680px;
+    flex-basis: 570px;
   }
 
   .program-form__purpose {
-    width: 680px;
+    width: 570px;
 
-    flex-basis: 680px;
+    flex-basis: 570px;
   }
 
   .program-form__button-wrapper {
@@ -273,5 +283,10 @@
     text-align: left;
 
     flex-basis: 570px;
+  }
+
+  .program-form__radio-input:focus + .program-form__radio-btn {
+    border-color: transparent;
+    box-shadow: 0 0 0 4px #ffffff,  0 0 0 6px #444444;
   }
 }
