--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -29,8 +29,8 @@
   font-weight: 500;
   src: local("Oswald Medium"),
   local("Oswald-Medium"),
-  url("../fonts/oswaldregular.woff2") format("woff2"),
-  url("../fonts/oswaldregular.woff") format("woff");
+  url("../fonts/oswaldmedium.woff2") format("woff2"),
+  url("../fonts/oswaldmedium.woff") format("woff");
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 
