--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -66,6 +66,10 @@
     background: linear-gradient(to bottom, #ffffff 0, #ffffff 619px, #f2f2f2 619px, #f2f2f2 100%);
   }
 
+  .example__slider-background {
+    background: linear-gradient(to right, transparent 0, transparent 50%, #eaeaea 50%, #eaeaea 100%);
+  }
+
   .example__wrapper {
     margin-bottom: 33px;
     padding-right: 30px;
