--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -17,7 +17,9 @@
   font-weight: 400;
   line-height: 60px;
 
-  margin: 0;
+  width: 280px;
+
+  margin: 0 auto;
   margin-bottom: 23px;
 
   color: $basicFontColor;
@@ -60,15 +62,16 @@
 
 @media (min-width: $mediumDeviceWidth) {
   .example {
-    padding-top: 43px;
+    border-top: $borderGrayTypeOne;
+    padding-top: 0;
     padding-bottom: 58px;
 
-    background: linear-gradient(to bottom, #ffffff 0, #ffffff 619px, #f2f2f2 619px, #f2f2f2 100%);
+    background: linear-gradient(to right, #f2f2f2 0, #f2f2f2 50%, #eaeaea 50%, #eaeaea 100%);
   }
 
-  .example__slider-background {
-    background: linear-gradient(to right, transparent 0, transparent 50%, #eaeaea 50%, #eaeaea 100%);
-  }
+  // .example__slider-background {
+  //   background: linear-gradient(to right, transparent 0, transparent 50%, #eaeaea 50%, #eaeaea 100%);
+  // }
 
   .example__wrapper {
     margin-bottom: 33px;
@@ -78,10 +81,15 @@
   }
 
   .example__title {
+    padding-top: 43px;
+    background-color: #ffffff;
     font-size: $bigFontSize;
     line-height: $largeLineHeight;
 
-    width: inherit;
+    width: 708px;
+
+
+    margin: 0 auto;
     margin-bottom: 64px;
   }
 
@@ -115,18 +123,15 @@
 
     flex-basis: 180px;
   }
-
-  .slider__images {
-    text-align: center;
-  }
 }
 
 @media (min-width: $largeDeviceWidth) {
   .example {
+    border-top: none;
     padding-top: 0;
-    padding-bottom: 51px;
+    padding-bottom: 0;
 
-    background: linear-gradient(to bottom, #ffffff 0, #ffffff 190px, #f2f2f2 190px, #f2f2f2 100%);
+    background: linear-gradient(to right, #f2f2f2 0, #f2f2f2 50%, #eaeaea 50%, #eaeaea 100%);
   }
 
   .example__inner {
@@ -140,6 +145,7 @@
     width: 610px;
     margin: 0;
     padding-top: 55px;
+    padding-bottom: 72px;
     padding-right: 0;
     padding-left: 110px;
 
@@ -147,6 +153,9 @@
   }
 
   .example__title {
+    width: 1220px;
+    padding-top: 0;
+    margin: 0 auto;
     margin-bottom: 146px;
   }
 
@@ -179,9 +188,13 @@
   }
 
   .example__slider {
-    width: 610px;
+    padding-bottom: 51px;
+    align-self: flex-end;
+    background: linear-gradient(to right, #f2f2f2 0, #f2f2f2 45%, #eaeaea 45%, #eaeaea 100%);
 
-    flex-basis: 610px;
+    width: 610px;
+    height: 411px;
+    flex-basis: 600px;
     flex-grow: 1;
   }
 }
