--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -3,6 +3,7 @@
   font-family: "Oswald";
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local("Oswald Regular"),
     local("Oswald-Regular"),
     url("../fonts/oswaldregular.woff2") format("woff2"),
@@ -15,6 +16,7 @@
   font-family: "Oswald";
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local("Oswald Regular"),
   local("Oswald-Regular"),
   url("../fonts/oswaldregular.woff2") format("woff2"),
@@ -27,6 +29,7 @@
   font-family: "Oswald";
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: local("Oswald Medium"),
   local("Oswald-Medium"),
   url("../fonts/oswaldmedium.woff2") format("woff2"),
@@ -39,6 +42,7 @@
   font-family: "Oswald";
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: local("Oswald Medium"),
   local("Oswald-Medium"),
   url("../fonts/oswaldmedium.woff2") format("woff2"),
