--- a/source/sass/blocks/program-form.scss
+++ b/source/sass/blocks/program-form.scss
@@ -246,6 +246,7 @@
     box-sizing: border-box;
     width: 1220px;
     margin: 0 auto;
+    padding-bottom: 55px;
 
     justify-content: space-between;
   }
