--- a/source/sass/blocks/client-contacts.scss
+++ b/source/sass/blocks/client-contacts.scss
@@ -3,12 +3,12 @@
   z-index: 1;
   margin: 0;
   padding: 0;
-  padding-top: 23px;
-  padding-bottom: 5px;
+  padding-top: 0;
+  padding-bottom: 0;
 
   &::before {
     @include title-line();
-    margin-top: -57px;
+    margin-top: 44px;
   }
 }
 
@@ -20,15 +20,18 @@
   padding-top: 10px;
   padding-right: 20px;
   padding-left: 20px;
+  padding-bottom: 28px;
 
   flex-wrap: wrap;
 }
 
 .client-contacts__title {
+  font-weight: 400;
   position: relative;
   z-index: 1;
   width: $smallDeviceWidth;
   margin: 0 auto;
+  margin-bottom: 24px;
   padding: 30px 0 0 0;
 
   background: linear-gradient(to right, transparent 0, transparent 20px, #ffffff 20px, #ffffff 221px, transparent 221px, transparent 100%);
@@ -136,7 +139,7 @@
     padding-bottom: 23px;
 
     &::before {
-      margin-top: -37px;
+      margin-top: 72px;
 
       width: 100%;
 
@@ -151,7 +154,7 @@
     padding-top: 52px;
     padding-right: 65px;
     padding-left: 71px;
-    padding-bottom: 19px;
+    padding-bottom: 42px;
 
     justify-content: flex-start;
   }
@@ -232,14 +235,14 @@
 
     &::before {
       top: 0;
-      margin-top: 77px;
+      margin-top: 22px;
     }
   }
 
   .client-contacts__title {
     box-sizing: border-box;
     width: $largeDeviceWidth;
-    padding-top: 55px;
+    padding-top: 0;
     padding-left: 40px;
 
     background: linear-gradient(to right, transparent 0, transparent 70px, #ffffff 70px, #ffffff 663px, transparent 663px, transparent 100%);
@@ -251,6 +254,7 @@
     width: $largeDeviceWidth;
     padding-right: 110px;
     padding-left: 110px;
+    padding-bottom: 19px;
 
     justify-content: space-between;
   }
