--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,51 +1,93 @@
 /* cyrillic */
 @font-face {
   font-family: "Oswald";
-  font-style: normal;
   font-weight: 400;
+  font-style: normal;
+
   font-display: swap;
   src: local("Oswald Regular"),
     local("Oswald-Regular"),
     url("../fonts/oswaldregular.woff2") format("woff2"),
     url("../fonts/oswaldregular.woff") format("woff");
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+  unicode-range: u+0400-045f,
+    u+0490-0491,
+    u+04b0-04b1,
+    u+2116;
 }
 
 /* latin */
 @font-face {
   font-family: "Oswald";
-  font-style: normal;
   font-weight: 400;
+  font-style: normal;
+
   font-display: swap;
   src: local("Oswald Regular"),
-  local("Oswald-Regular"),
-  url("../fonts/oswaldregular.woff2") format("woff2"),
-  url("../fonts/oswaldregular.woff") format("woff");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    local("Oswald-Regular"),
+    url("../fonts/oswaldregular.woff2") format("woff2"),
+    url("../fonts/oswaldregular.woff") format("woff");
+  unicode-range: u+0000-00ff,
+    u+0131,
+    u+0152-0153,
+    u+02bb-02bc,
+    u+02c6,
+    u+02da,
+    u+02dc,
+    u+2000-206f,
+    u+2074,
+    u+20ac,
+    u+2122,
+    u+2191,
+    u+2193,
+    u+2212,
+    u+2215,
+    u+feff,
+    u+fffd;
 }
 
 /* cyrillic */
 @font-face {
   font-family: "Oswald";
-  font-style: normal;
   font-weight: 500;
+  font-style: normal;
+
   font-display: swap;
   src: local("Oswald Medium"),
-  local("Oswald-Medium"),
-  url("../fonts/oswaldmedium.woff2") format("woff2"),
-  url("../fonts/oswaldmedium.woff") format("woff");
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+    local("Oswald-Medium"),
+    url("../fonts/oswaldmedium.woff2") format("woff2"),
+    url("../fonts/oswaldmedium.woff") format("woff");
+  unicode-range: u+0400-045f,
+    u+0490-0491,
+    u+04b0-04b1,
+    u+2116;
 }
 
 /* latin */
 @font-face {
   font-family: "Oswald";
-  font-style: normal;
   font-weight: 500;
+  font-style: normal;
+
   font-display: swap;
   src: local("Oswald Medium"),
-  local("Oswald-Medium"),
-  url("../fonts/oswaldmedium.woff2") format("woff2"),
-  url("../fonts/oswaldmedium.woff") format("woff");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    local("Oswald-Medium"),
+    url("../fonts/oswaldmedium.woff2") format("woff2"),
+    url("../fonts/oswaldmedium.woff") format("woff");
+  unicode-range: u+0000-00ff,
+    u+0131,
+    u+0152-0153,
+    u+02bb-02bc,
+    u+02c6,
+    u+02da,
+    u+02dc,
+    u+2000-206f,
+    u+2074,
+    u+20ac,
+    u+2122,
+    u+2191,
+    u+2193,
+    u+2212,
+    u+2215,
+    u+feff,
+    u+fffd;
 }
