исправил контакты, подключение шрифтов, добавил оптимизацию скриптов и html, переделал focus у checkbox и radio

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -119,7 +119,7 @@
     position: absolute;
     z-index: 1;
     top: 95px;
-    left: 110px;
+    right: 53%;
 
     width: 570px;
     height: 200px;
