--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -141,6 +141,7 @@
 
   .example__wrapper {
     width: 610px;
+    max-width: 610px;
     margin: 0;
     padding-top: 55px;
     padding-right: 0;
