--- a/source/sass/blocks/program-form.scss
+++ b/source/sass/blocks/program-form.scss
@@ -94,7 +94,19 @@
   }
 }
 
-.program-form__radio-btn:active {
+.program-form__radio-input:focus + .program-form__radio-btn {
+  color: rgba(17, 17, 17, 0.3);
+
+  &::before {
+    opacity: 0.3;
+  }
+
+  &::after {
+    opacity: 0.3;
+  }
+}
+
+.program-form__radio-input:active + .program-form__radio-btn {
   color: rgba(17, 17, 17, 0.3);
 
   &::before {
@@ -112,7 +124,19 @@
   }
 }
 
-.program-form__checkbox-btn:active {
+.program-form__checkbox-input:focus + .program-form__checkbox-btn {
+  color: rgba(17, 17, 17, 0.3);
+
+  &::before {
+    opacity: 0.3;
+  }
+
+  &::after {
+    opacity: 0.3;
+  }
+}
+
+.program-form__checkbox-input:active + .program-form__checkbox-btn {
   color: rgba(17, 17, 17, 0.3);
 
   &::before {
@@ -174,16 +198,6 @@
 
   .program-form__item--border {
     border: none;
-  }
-
-  .program-form__radio-input:focus + .program-form__radio-btn {
-    border-color: transparent;
-    box-shadow: 0 0 0 1px #ffffff, 0 0 0 3px #444444;
-  }
-
-  .program-form__checkbox-input:focus + .program-form__checkbox-btn {
-    border-color: transparent;
-    box-shadow: 0 0 0 9px #ffffff, 0 0 0 11px #444444;
   }
 
   .program-form__item .program-form__label {
@@ -284,10 +298,5 @@
     text-align: left;
 
     flex-basis: 570px;
-  }
-
-  .program-form__radio-input:focus + .program-form__radio-btn {
-    border-color: transparent;
-    box-shadow: 0 0 0 4px #ffffff, 0 0 0 6px #444444;
   }
 }
