--- a/source/sass/blocks/advantages-list.scss
+++ b/source/sass/blocks/advantages-list.scss
@@ -153,7 +153,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $mediumDeviceWidth) {
   .advantages-list__item {
     font-size: $basicFontSize;
     line-height: $mediumLineHeight;
@@ -315,7 +315,7 @@
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: $largeDeviceWidth) {
   .advantages-list__item {
     box-sizing: border-box;
     width: 245px;
