--- a/source/sass/blocks/categories.scss
+++ b/source/sass/blocks/categories.scss
@@ -4,7 +4,7 @@
   padding-left: 20px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $mediumDeviceWidth) {
   .categories {
     padding-top: 22px;
     padding-right: 30px;
@@ -12,11 +12,11 @@
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: $largeDeviceWidth) {
   .categories {
     padding-top: 80px;
-    padding-right: 110px;
-    padding-left: 110px;
+    padding-right: 14px;
+    padding-left: 40px;
   }
 
   .categories__item {
