--- a/source/sass/blocks/client-contacts.scss
+++ b/source/sass/blocks/client-contacts.scss
@@ -250,16 +250,20 @@
     padding-top: 0;
     padding-left: 40px;
 
-    background: linear-gradient(to right, transparent 0, transparent 70px, #ffffff 70px, #ffffff 663px, transparent 663px, transparent 100%);
+    background: linear-gradient(to right, transparent 0, transparent 0px, #ffffff 0px, #ffffff 590px, transparent 590px, transparent 100%);
+  }
+
+  .client-contacts__title span {
+    padding-left: 0;
   }
 
   .client-contacts__inner {
     flex-direction: row;
 
     width: $largeDeviceWidth;
-    padding-right: 110px;
+    padding-right: 40px;
     padding-bottom: 19px;
-    padding-left: 110px;
+    padding-left: 40px;
 
     justify-content: space-between;
   }
