--- a/source/sass/blocks/site-grid.scss
+++ b/source/sass/blocks/site-grid.scss
@@ -36,6 +36,8 @@
       background-repeat: no-repeat;
       background-position: 111%;
       background-size: 55%;
+
+      object-fit: cover;
     }
   }
 }
