--- a/source/sass/blocks/categories-item.scss
+++ b/source/sass/blocks/categories-item.scss
@@ -81,7 +81,7 @@
 
 @media (min-width: $largeDeviceWidth) {
   .categories-item {
-    width: 570px;
+    width: 100%;
     max-width: 570px;
     margin-bottom: 0;
     padding-top: 40px;
