--- a/source/sass/blocks/client-contacts.scss
+++ b/source/sass/blocks/client-contacts.scss
@@ -250,7 +250,7 @@
     padding-top: 0;
     padding-left: 40px;
 
-    background: linear-gradient(to right, transparent 0, transparent 0px, #ffffff 0px, #ffffff 590px, transparent 590px, transparent 100%);
+    background: linear-gradient(to right, transparent 0, transparent 0, #ffffff 0, #ffffff 590px, transparent 590px, transparent 100%);
   }
 
   .client-contacts__title span {
