--- a/source/sass/blocks/extra-products.scss
+++ b/source/sass/blocks/extra-products.scss
@@ -99,7 +99,7 @@
     padding-left: 40px;
 
     border-bottom: none;
-    background: linear-gradient(to right, transparent 0, transparent 0px, #ffffff 0px, #ffffff 413px, transparent 413px, transparent 100%);
+    background: linear-gradient(to right, transparent 0, transparent 0, #ffffff 0, #ffffff 413px, transparent 413px, transparent 100%);
   }
 
   .extra-products__inner {
