--- a/source/sass/blocks/optionally.scss
+++ b/source/sass/blocks/optionally.scss
@@ -173,7 +173,7 @@
     padding-top: 0;
     padding-left: 40px;
 
-    background: linear-gradient(to right, transparent 0, transparent 0px, #ffffff 0px, #ffffff 290px, transparent 290px, transparent 100%);
+    background: linear-gradient(to right, transparent 0, transparent 0, #ffffff 0, #ffffff 290px, transparent 290px, transparent 100%);
   }
 
   .optionally__title span {
