--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -53,7 +53,11 @@
 
     width: inherit;
 
-    flex-wrap: nowrap;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+
+  .advantages__title {
+    margin-bottom: 52px;
   }
 }
