--- a/source/sass/blocks/categories.scss
+++ b/source/sass/blocks/categories.scss
@@ -14,13 +14,14 @@
 
 @media (min-width: $largeDeviceWidth) {
   .categories {
-    padding-top: 80px;
+    padding-top: 40px;
     padding-right: 40px;
     padding-left: 40px;
   }
 
   .categories__item {
     box-sizing: border-box;
+    margin-top: 40px;
     width: 570px;
 
     flex-basis: 570px;
