--- a/source/sass/blocks/comment.scss
+++ b/source/sass/blocks/comment.scss
@@ -112,7 +112,7 @@
     margin-bottom: 77px;
     padding-left: 40px;
 
-    background: linear-gradient(to right, transparent 0, transparent 0px, #ffffff 0px, #ffffff 260px, transparent 260px, transparent 100%);
+    background: linear-gradient(to right, transparent 0, transparent 0, #ffffff 0, #ffffff 260px, transparent 260px, transparent 100%);
   }
 
   .comment__inner {
