--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -45,7 +45,8 @@
   padding-right: 82px;
   padding-left: 73px;
 
-  justify-content: space-between;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .page-footer__copyright {
@@ -87,11 +88,10 @@
   .page-footer__social {
     display: flex;
 
-    width: 124px;
+    width: 150px;
     margin-bottom: 0;
-    padding-left: 99px;
+    padding-left: 127px;
 
-    justify-content: space-between;
     align-items: center;
   }
 
